Improved Menu Design and fixed message wrapping

--- a/src/app/chat/input-area/input-area.component.scss
+++ b/src/app/chat/input-area/input-area.component.scss
@@ -11,7 +11,7 @@
 
 .alfa-input-area-form button {
   background: #FFFFFF;
-  color: #000000;
+  color: #1C5475;
 }
 
 .alfa-input-area-form  {
