--- a/src/app/chat/text-area/user-message/user-message.component.scss
+++ b/src/app/chat/text-area/user-message/user-message.component.scss
@@ -11,7 +11,7 @@ mat-card {
   display: flex;
   flex-direction: column;
   padding: 0.5rem 1rem;
-  max-width: 80%;
+  max-width: 80vw;
 }
 
 .message p {
